# snake_oil_sdl

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build.yml  style.yml
scripts/: fix_style.sh  lint.sh
src/: app.c  camera.c  enums.h  game.c  game.h  key_event.c  key_event.h  main.c  main.cpp  player.c  player.h  pos.h  system.c  system.h
src/client/: app.c  app.h  app_state.h  camera.h  character.c  character.h  enums.h  game.c  game.h  game_world.c  game_world.h  hud.c  hud.h  key_event.c  key_event.h  main.c  net_client.c  net_client.h  player.c  player.h  render.c  render.h  system.c  system.h
src/game/: character.c  character.h  game_world.c  game_world.h  input.h  player.c  player.h
src/playground/: fps.c
src/protocol/: messages.c  messages.h  protocol.h
src/server/: client.c  client.h  main.c  server.c  server.h  server_state.h  system.c  system.h
src/shared/: logger.c  logger.h  system.c  system.h
